; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/netmap/extr_netmap_mem2.c_nm_free_lut.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/netmap/extr_netmap_mem2.c_nm_free_lut.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lut_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lut_entry*, i32)* @nm_free_lut to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nm_free_lut(%struct.lut_entry* %0, i32 %1) #0 {
  %3 = alloca %struct.lut_entry*, align 8
  %4 = alloca i32, align 4
  store %struct.lut_entry* %0, %struct.lut_entry** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.lut_entry*, %struct.lut_entry** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = sext i32 %6 to i64
  %8 = mul i64 4, %7
  %9 = trunc i64 %8 to i32
  %10 = call i32 @bzero(%struct.lut_entry* %5, i32 %9)
  %11 = load %struct.lut_entry*, %struct.lut_entry** %3, align 8
  %12 = call i32 @vfree(%struct.lut_entry* %11)
  ret void
}

declare dso_local i32 @bzero(%struct.lut_entry*, i32) #1

declare dso_local i32 @vfree(%struct.lut_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
